# TrendBridge

./: .gitignore  Procfile  README.md  pyproject.toml
tests/: test_links.py  test_post.py
trendbridge/: __init__.py  auth.py  browser.py  main.py  post.py  requirements.txt
